--- a/my_template/templates/partials/lot_search_blocks.html
+++ b/my_template/templates/partials/lot_search_blocks.html
@@ -1,3 +1,4 @@
+{% load static %}
 <div class="row">
     <!-- Each card with icons -->
     <div class="col-md-3">
@@ -7,7 +8,8 @@
             <p class="mb-0 text-secondary">Topic</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-bookmark fa-lg text-primary"></i>
+          <img src="{% static 'images/icons/Topic.png' %}" alt="Topic" style="width: 24px; height: 24px;">
+          
         </div>
       </div>
     </div>
@@ -19,7 +21,7 @@
             <p class="mb-0 text-secondary">Special Focus</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-bullseye fa-lg text-pink"></i>
+          <img src="{% static 'images/icons/Special_Focus.png' %}" alt="Special Focus" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -31,7 +33,7 @@
             <p class="mb-0 text-secondary">Project Group</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-layer-group fa-lg text-purple"></i>
+          <img src="{% static 'images/icons/Project_Group.png' %}" alt="Project Group" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -43,7 +45,7 @@
             <p class="mb-0 text-secondary">Lot Status</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-info-circle fa-lg text-info"></i>
+          <img src="{% static 'images/icons/Status.png' %}" alt="Lot Status" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -55,7 +57,7 @@
             <p class="mb-0 text-secondary">Project Name</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-diagram-project fa-lg text-success"></i>
+          <img src="{% static 'images/icons/Project_Group.png' %}" alt="Project Name" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -67,7 +69,7 @@
             <p class="mb-0 text-secondary">Factory</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-industry fa-lg text-secondary"></i>
+          <img src="{% static 'images/icons/Factory.png' %}" alt="Factory" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -79,7 +81,7 @@
             <p class="mb-0 text-secondary">BU</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-building fa-lg text-secondary"></i>
+          <img src="{% static 'images/icons/BU.png' %}" alt="BU" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -91,7 +93,7 @@
             <p class="mb-0 text-secondary">Department</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-users-cog fa-lg text-secondary"></i>
+          <img src="{% static 'images/icons/Dpmt.png' %}" alt="Department  " style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -103,7 +105,7 @@
             <p class="mb-0 text-secondary">Shipment</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-truck-fast fa-lg text-secondary"></i>
+          <img src="{% static 'images/icons/Shipping.png' %}" alt="Shipment" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -115,7 +117,7 @@
             <p class="mb-0 text-secondary">Requestor</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-user-tie fa-lg text-secondary"></i>
+          <img src="{% static 'images/icons/Requestor.png' %}" alt="Requestor" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -127,7 +129,7 @@
             <p class="mb-0 text-secondary">Start Date</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-calendar-day fa-lg text-warning"></i>
+          <img src="{% static 'images/icons/Start_End_Date.png' %}" alt="Start Date" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -139,7 +141,7 @@
             <p class="mb-0 text-secondary">End Date</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-calendar-check fa-lg text-danger"></i>
+          <img src="{% static 'images/icons/Start_End_Date.png' %}" alt="End Date" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
@@ -151,7 +153,7 @@
             <p class="mb-0 text-secondary">Total Lot Turns</p>
             <h4 class="my-1 placeholder-glow">&nbsp;</h4>
           </div>
-          <i class="fa-solid fa-recycle fa-lg text-info"></i>
+          <img src="{% static 'images/icons/Total_Lots.png' %}" alt="Total Lot Turns" style="width: 24px; height: 24px;">
         </div>
       </div>
     </div>
